--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ install:
   - npm install
   
 script:
-  - docker pull michelleamesquita/cucumber-bdd-ci
-  - docker run -v $PWD/:/app/report/ michelleamesquita/cucumber-bdd-ci
+  - docker push vitorcastillo/bdd-test
+  - docker run -v $PWD/:/app/report/ vitorcastillo/bdd-test
 
 # after_script:
 #   - bash ./telegram_notification.sh
